created product information component, created Dockerfiles to enable docker-dev environment

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
-@import './variables.scss';
 
 .main-content_body {
   margin-top: 1.6rem;
+  margin-bottom: 3.2rem;
 }
 
 .main-content_container {
