--- a/src/components/product-details/product-details.scss
+++ b/src/components/product-details/product-details.scss
@@ -1,6 +1,10 @@
 .product-information__container {
     padding: 1.2rem;
 
+    .product__picture--container {
+        overflow: hidden;
+    }
+
     img.product__picture {
         display: block;
         width: 100%;
